# forest-elephants-rumble-detection

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  TODO.md  dvc.yaml  pyproject.toml
application/08_artifacts/: inference_config.yaml
application/gui/: gui.py
application/inference/: predict_on_tensor.py  torchaudio_nonumpy.py
application/userinterface/: ui.py
data/: README.md
data/03_model_input/: .gitignore
data/04_models/yolov8/: .gitignore
data/05_model_output/yolov8/: .gitignore
data/06_reporting/yolov8/: .gitignore
notebooks/application/: 1.0-generate-spectrograms-from-audio-file.ipynb
notebooks/data_preparation/: 1.0-arthur-data-preparation.ipynb  2.0-arthur-data-preparation.ipynb  2.1-arthur-data-generation.ipynb  2.2-arthur-data-generation-testing.ipynb  2.3-arthur-data-preparation-spectrogram-generation.ipynb  spectrogram_test.txt
notebooks/playground/: 1.0-arthur-python-sounds-spectrograms.ipynb  2.0-arthur-python-sounds-spectrograms-rumbles.ipynb  3.0-torch-audio.ipynb  3.1-torch-audio-rumbles.ipynb  3.2-torch-audio-rumbles-pipeline.ipynb  3.3-torch-audio-rumbles-application.ipynb  3.3-torch-audio-rumbles-pipeline-bbox.ipynb  3.5-torch-audio-rumbles-application-inference-pipeline.ipynb  4.0-louk-torch-inference-pipeline.ipynb  torchaudio_spectrogram_000.txt  torchaudio_spectrogram_001.txt
references/: literature.md
scripts/data/: build_features.py  build_features2.py  build_yolov8_model_input.py  download.sh  make_spectograms.py
scripts/model/yolov8/: eval.py  inference.py  predict_raven.py  train.py
src/forest_elephants_rumble_detection/: utils.py
src/forest_elephants_rumble_detection/data/: audio.py  math.py  offsets.py  rumbles.py  spectrogram.py  spectrogram_deprecate.py  yolov8.py
(+12 files in other folders)
