[tool.poetry]
name = "forest-elephants-rumble-detection"
version = "0.1.0"
description = ""
authors = ["Chouffe <arthur@caillau.me>"]
readme = "README.md"
packages = [{include = "forest_elephants_rumble_detection", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
